Fixed bug
Some elements were not visible in dark mode, not fixed with different colors

--- a/src/styles.css
+++ b/src/styles.css
@@ -61,6 +61,7 @@ h1, h2, h3, h4, h5, h6 {
   --primary-color: #7D5A50;
   --secondary-color: #B4846C;
   --font-color: #FCDEC0;
+  --font-hover: #7D5A50;
   --background-color: #FCDEC0;
   --shadow-color: #000000;
 }
@@ -89,6 +90,8 @@ body {
   justify-content: center;
   box-shadow: 0px -5px 12px var(--shadow-color);
   min-height: 134px;
+  position: relative;
+  overflow: hidden;
 }
 
 .menuImage {
@@ -301,7 +304,7 @@ body {
 
 .rowTitle:hover {
   cursor: pointer;
-  filter: brightness(0) saturate(100%) invert(42%) sepia(11%) saturate(1152%) hue-rotate(327deg) brightness(85%) contrast(90%);
+  color: var(--font-hover)
 }
 
 .rowDueDate {
@@ -325,7 +328,14 @@ body {
 }
 .rowIcon:hover {
   cursor: pointer;
-  filter: brightness(0) saturate(100%) invert(42%) sepia(11%) saturate(1152%) hue-rotate(327deg) brightness(85%) contrast(90%);
+}
+
+.detailsIcon:hover {
+  filter: brightness(0) saturate(100%) invert(16%) sepia(98%) saturate(3810%) hue-rotate(243deg) brightness(96%) contrast(100%);
+}
+
+.editIcon:hover {
+  filter: brightness(0) saturate(100%) invert(76%) sepia(99%) saturate(1228%) hue-rotate(6deg) brightness(97%) contrast(105%);
 }
 
 .trashIcon:hover {
@@ -406,7 +416,7 @@ body {
   height: 30px;
   margin-left: auto;
   margin-bottom: 20px;
-  filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(0%) hue-rotate(259deg) brightness(106%) contrast(106%);
+  filter: var(--icon-hover);
 }
 
 .exitButton:hover {
